--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "sqlite3": "^5.1.6"
+        "sequelize": "^6.31.1",
+        "sqlite3": "^5.1.6",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
