--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "sequelize": "^6.31.1",
-        "sqlite3": "^5.1.6",
-        "uuid": "^9.0.0"
+        "mongoose": "^7.2.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
