--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "test": "jest --watchAll --no-cache"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "setupFilesAfterEnv": [
+            "./test/setup.js"
+        ]
     },
     "keywords": [],
     "author": "",
@@ -14,9 +21,13 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
         "mongoose": "^7.2.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.22"
+        "jest": "^29.5.0",
+        "mongodb-memory-server": "^8.12.2",
+        "nodemon": "^2.0.22",
+        "supertest": "^6.3.3"
     }
 }
